--- a/app/globals.css
+++ b/app/globals.css
@@ -76,6 +76,13 @@
   }
 }
 
+.no-scroll {
+  overflow-y: hidden;
+}
+.custom-btn {
+  width: 50px !important;
+  height: 50px !important;
+}
 html,
 body,
 :root {
